# rust-embedded

./: README.md
active-buzzer/: Cargo.toml
ble-std/: Cargo.toml  ble-test-debug.html  ble-test.html  ble-webapi-test.html  sdkconfig.defaults
ble-std/.cargo/: config.toml
ble-std/examples/: ble_scan.rs
ble-std/src/: main.rs
blinky-embassy/: Cargo.toml
button/: Cargo.toml
button-interrupt/: Cargo.toml
buzzer-song/: Cargo.toml
common/lib/wifi/: Cargo.toml  cfg.toml  sdkconfig.defaults
common/lib/wifi/examples/: wifi.rs
common/lib/wifi/src/: lib.rs
hello-world/: Cargo.toml
hello-world-std/: Cargo.toml  sdkconfig.defaults
hello_world_std/: Cargo.toml
hello_world_std/.cargo/: config.toml
hello_world_std/src/: main.rs
http-client/: Cargo.toml
http-client-std/: Cargo.toml  build.rs  cfg.toml
http-client-std/.cargo/: config.toml
http-client-std/examples/: http_client.rs  https_client.rs
http-server/: Cargo.toml  cfg.toml  sdkconfig.defaults  test.rest
http-server/src/: index.html  main.rs
led-pwm/: Cargo.toml
oled-spi/: Cargo.toml
oled-std/: Cargo.toml  sdkconfig.defaults
oled-std/src/: main.rs
