[package]
edition = "2021"
name = "http-client"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "http-client"
path = "./src/bin/main.rs"

[dependencies]
esp-alloc = "0.8.0"
esp-hal = { version = "1.0.0-beta.1", features = ["esp32c3", "unstable"] }
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e" }
esp-backtrace = { version = "0.16.0", features = [
  "esp32c3",
  "panic-handler",
  "exception-handler",
  "println",
] }
esp-bootloader-esp-idf = "0.1.0"
esp-println = { version = "0.14.0", features = ["esp32c3"] }
esp-wifi = { version = "0.14.1", features = ["esp32c3", "wifi", "smoltcp"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "socket-raw",
] }
edge-dhcp = { version = "0.6.0" }
edge-raw = { version = "0.6.0" }
edge-nal = { version = "0.5.0" }
edge-nal-embassy = { version = "0.6.0" }
embedded-io = { version = "0.6.1", default-features = false }
heapless = { version = "0.8.0", default-features = false }

# TODO: Explain
[profile.release]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
opt-level = 3
[profile.dev]
lto = "off"
